--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <a href="design.html" class="nav--link">Process</a>
 <a href="jeff-doan-resume--2025.pdf" target="_blank" class="nav--link hide-for-small">Résumé</a>
         <a href="reviews.html" class="nav--link">Reviews</a>
-        <a href="https://bit.ly/4dJLPK9" class="nav--link hide-for-small" target="_blank">Docs</a>
+        <a href="https://docs.google.com/document/d/1sjazRACTOvJBOqYeRUVLYsPCC5FW5Qk8QTOOPm0psJs/edit?ref=hire.jefff.co&tab=t.0" class="nav--link hide-for-small" target="_blank">Docs</a>
         <a href="mailto:the.jeffdoan@gmail.com?subject=Come work for us please" class="nav--link hide-for-small">Contact</a>
       </nav>
     </header>
@@ -121,7 +121,7 @@
         <h3 class="heading mar-bot--40">Figma links, prototypes, side projects, etc.</h3>
         <!-- <p class="mar-bot--40">Figma prototypes, side-projects, writings.</p> -->
 
-        <a href="https://bit.ly/4dJLPK9" target="_blank" class="promo cf mar-bot--32">
+        <a href="https://docs.google.com/document/d/1sjazRACTOvJBOqYeRUVLYsPCC5FW5Qk8QTOOPm0psJs/edit?ref=hire.jefff.co&tab=t.0" target="_blank" class="promo cf mar-bot--32">
           <img src="images/docs--logo.png" alt="Good reads for product folks logo" />
           <h3 class="heading body ibm">
             Curated product reads
