--- a/reviews.html
+++ b/reviews.html
@@ -36,7 +36,7 @@
         <a href="design.html" class="nav--link">Process</a>
 <a href="jeff-doan-resume--2025.pdf" target="_blank" class="nav--link hide-for-small">Résumé</a>
 <a href="reviews.html" class="nav--link active">Reviews</a>
-        <a href="https://bit.ly/4dJLPK9" class="nav--link hide-for-small" target="_blank">Docs</a>
+        <a href="https://docs.google.com/document/d/1sjazRACTOvJBOqYeRUVLYsPCC5FW5Qk8QTOOPm0psJs/edit?ref=hire.jefff.co&tab=t.0" class="nav--link hide-for-small" target="_blank">Docs</a>
         <a href="mailto:the.jeffdoan@gmail.com?subject=Come work for us please" class="nav--link hide-for-small">Contact</a>
       </nav>
     </header>
@@ -53,6 +53,11 @@
           <div class="review--item">
             <h2 class="heading--lite mar-bot--8">Jeff approaches every problem with a huge amount of energy and hustle, enabling him to get to breakthrough on tough design challenges in a short period of time. He sets the pace for others around him, driving up the velocity for the whole team. Customers get value quickly and continuously which is the whole reason we are in business.</h2>
             <a href="https://www.linkedin.com/in/raymondsandza/" class="reviews--link" target="_blank">Ray, VP Strategy</a>
+          </div>
+
+          <div class="review--item">
+            <h2 class="heading--lite mar-bot--8">What truly sets Jeff apart is his bias toward action. He doesn’t wait for perfect information or permission to explore an idea; instead, he quickly prototypes, tests, and iterates, helping the team make smarter decisions with less risk. His ability to turn a concept into something tangible is both impressive and invaluable. No matter the scope of the task—whether it was improving internal tooling or designing entirely new product features—he always found opportunities to innovate and elevate the user experience.</h2>
+            <a href="https://www.linkedin.com/in/4eleanorma" class="reviews--link" target="_blank">El, Sr. Design Manager, Growth &amp; Monetization</a>
           </div>
 
           <div class="review--item">
