Add in new GPTs page

--- a/about.html
+++ b/about.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=Edge;chrome=1" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     
-    <title dir="ltr">About Jeff Doan | Product, growth, and business designer that loves using tech for good. I craft 0-1 experiences and wear many hats to do so.</title>
-    <meta name="description" content="My collection of work, musings on product design, email design, and other web-related thingamajigs." />
+    <title dir="ltr">About Jeff Doan: Product, growth, and business designer that loves using tech for good.</title>
+    <meta name="description" content="Collection of my product design work, side projects, AI-inspiration, and more. I craft 0-1 experiences and wear many hats to do so." />
 
     <meta property='og:type' content='website' />
     <meta property='og:title' content='made by Jeff' />
-    <meta property='og:description' content='My collection of work, musings on product design, email design, and other web-related thingamajigs.' />
+    <meta property='og:description' content='Collection of my product design work, side projects, AI-inspiration, and more. I craft 0-1 experiences and wear many hats to do so.' />
     <meta property='og:image' content='/images/social-image--new.png' />
 
     <link href="stylesheets/app.css" rel="stylesheet" type="text/css" />
@@ -33,8 +33,9 @@
       <a href="index.html"><img src="images/me--new.jpg" class="logo--img" alt="Jeff Doan, product designer and web maker." /></a>
       <nav class="nav">
         <a class="nav--link active">About</a>
-        <a href="design.html" class="nav--link">Process</a>
-<a href="jeff-doan-resume--2025.pdf" target="_blank" class="nav--link hide-for-small">Résumé</a>
+        <!-- <a href="design.html" class="nav--link">Process</a> -->
+        <a href="jeff-doan-resume--2025.pdf" target="_blank" class="nav--link hide-for-small">Résumé</a>
+        <a href="gpts.html" class="nav--link">GPTs</a>
         <a href="reviews.html" class="nav--link">Reviews</a>
         <a href="https://docs.google.com/document/d/1sjazRACTOvJBOqYeRUVLYsPCC5FW5Qk8QTOOPm0psJs/edit?ref=hire.jefff.co&tab=t.0" class="nav--link hide-for-small" target="_blank">Docs</a>
         <a href="mailto:the.jeffdoan@gmail.com?subject=Come work for us please" class="nav--link hide-for-small">Contact</a>
