--- a/design.html
+++ b/design.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     
     <title dir="ltr">Design process | Product, growth, and business designer that loves using tech for good. I craft 0-1 experiences and wear many hats to do so.</title>
-    <meta name="description" content="My collection of work, musings on product design, email design, and other web-related thingamajigs." />
+    <meta name="description" content="Collection of my product design work, side projects, AI-inspiration, and more. I craft 0-1 experiences and wear many hats to do so." />
 
     <meta property='og:type' content='website' />
     <meta property='og:title' content='made by Jeff' />
-    <meta property='og:description' content='My collection of work, musings on product design, email design, and other web-related thingamajigs.' />
+    <meta property='og:description' content='Collection of my product design work, side projects, AI-inspiration, and more. I craft 0-1 experiences and wear many hats to do so.' />
     <meta property='og:image' content='/images/social-image--new.png' />
 
     <link href="stylesheets/app.css" rel="stylesheet" type="text/css" />
