--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=Edge;chrome=1" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     
-    <title dir="ltr">Jeff Doan | Product, growth, and business designer that loves using tech for good. I craft 0-1 experiences and wear many hats to do so.</title>
-    <meta name="description" content="My collection of work, musings on product design, email design, and other web-related thingamajigs." />
+    <title dir="ltr">Jeff Doan: Product, growth, and business designer that loves using tech for good.</title>
+    <meta name="description" content="Collection of my product design work, side projects, AI-inspiration, and more. I craft 0-1 experiences and wear many hats to do so." />
 
     <meta property='og:type' content='website' />
-    <meta property='og:title' content='made by Jeff' />
-    <meta property='og:description' content='My collection of work, musings on product design, email design, and other web-related thingamajigs.' />
+    <meta property='og:title' content='Jeff Doan: Product, growth, and business designer that loves using tech for good.' />
+    <meta property='og:description' content='Collection of my product design work, side projects, AI-inspiration, and more. I craft 0-1 experiences and wear many hats to do so.' />
     <meta property='og:image' content='/images/social-image--new.png' />
 
     <link href="stylesheets/app.css" rel="stylesheet" type="text/css" />
@@ -33,8 +33,9 @@
       <img src="images/me--new.jpg" class="logo--img" alt="Jeff Doan, product designer and web maker." />
       <nav class="nav">
         <a href="about.html" class="nav--link">About</a>
-        <a href="design.html" class="nav--link">Process</a>
-<a href="jeff-doan-resume--2025.pdf" target="_blank" class="nav--link hide-for-small">Résumé</a>
+        <!-- <a href="design.html" class="nav--link">Process</a> -->
+        <a href="jeff-doan-resume--2025.pdf" target="_blank" class="nav--link hide-for-small">Résumé</a>
+        <a href="gpts.html" class="nav--link">GPTs</a>
         <a href="reviews.html" class="nav--link">Reviews</a>
         <a href="https://docs.google.com/document/d/1sjazRACTOvJBOqYeRUVLYsPCC5FW5Qk8QTOOPm0psJs/edit?ref=hire.jefff.co&tab=t.0" class="nav--link hide-for-small" target="_blank">Docs</a>
         <a href="mailto:the.jeffdoan@gmail.com?subject=Come work for us please" class="nav--link hide-for-small">Contact</a>
@@ -280,9 +281,9 @@
       </div>
 
       <!-- sticky GPT badge -->
-      <a href="https://chatgpt.com/g/g-684af3491ed88191bcaee7034e2bfc50-camping-packer-pal" target="_blank"v class="sticky-badge">
-        <img src="images/camping-packer-pal.png" />
-        <span class="badge--text">Camping Packer Pal</span>
+      <a href="https://chatgpt.com/g/g-686d988923cc8191a3712ca881a7848e-ai-visibility-check" target="_blank"v class="sticky-badge">
+        <img src="images/ai-visibility-checker.png" />
+        <span class="badge--text">AI Visibility Checker</span>
         <span class="micro text--grey">Try my custom GPT</span>
       </a>
 
