--- a/healme.html
+++ b/healme.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=Edge;chrome=1" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     
-    <title dir="ltr">Heal.me | made by Jefff</title>
+    <title dir="ltr">Simpler workflows, better tools, more bookings for Heal.me: Jeff Doan</title>
     <meta name="description" content="A deep-dive case-study on the work I have been leading as the Head of Design at Heal.me." />
 
     <meta property='og:type' content='website' />
@@ -33,8 +33,9 @@
       <a href="index.html"><img src="images/me--new.jpg" class="logo--img" alt="Jeff Doan, product designer and web maker." /></a>
       <nav class="nav">
         <a href="about.html" class="nav--link">About</a>
-        <a href="design.html" class="nav--link">Process</a>
-<a href="jeff-doan-resume--2025.pdf" target="_blank" class="nav--link hide-for-small">Résumé</a>
+        <!-- <a href="design.html" class="nav--link">Process</a> -->
+        <a href="jeff-doan-resume--2025.pdf" target="_blank" class="nav--link hide-for-small">Résumé</a>
+        <a href="gpts.html" class="nav--link">GPTs</a>
         <a href="reviews.html" class="nav--link">Reviews</a>
         <a href="https://docs.google.com/document/d/1sjazRACTOvJBOqYeRUVLYsPCC5FW5Qk8QTOOPm0psJs/edit?ref=hire.jefff.co&tab=t.0" class="nav--link hide-for-small" target="_blank">Docs</a>
         <a href="mailto:the.jeffdoan@gmail.com?subject=Come work for us please" class="nav--link hide-for-small">Contact</a>
