--- a/gpts.html
+++ b/gpts.html
@@ -52,6 +52,13 @@
         <div class="reviews-list">
           
           <div class="review--item review--item--no-quote">
+            <img src="images/gpt-ai-risk.png" class="mar-bot--24" alt="AI Job Risk Assessment details" />
+            <!-- <h2 class="heading--lite mar-bot--8">AI Visibility Check</h2>
+            <p class="mar-bot--16">I help businesses understand how they show up in AI answers. Type "Show me" to simulate how an AI might respond when asked, “Which provider is good for [your category]?”</p> -->
+            <a href="https://chatgpt.com/g/g-687ab0e9b5e88191bff2805c4d76fe5e-ai-job-risk-assessment" target="_blank" class="btn btn--black">Try it out</a>
+          </div>
+
+          <div class="review--item review--item--no-quote">
             <img src="images/gpt-ai-visibility.png" class="mar-bot--24" alt="AI Visibility Check details" />
             <!-- <h2 class="heading--lite mar-bot--8">AI Visibility Check</h2>
             <p class="mar-bot--16">I help businesses understand how they show up in AI answers. Type "Show me" to simulate how an AI might respond when asked, “Which provider is good for [your category]?”</p> -->
