--- a/index.html
+++ b/index.html
@@ -281,9 +281,9 @@
       </div>
 
       <!-- sticky GPT badge -->
-      <a href="https://chatgpt.com/g/g-686d988923cc8191a3712ca881a7848e-ai-visibility-check" target="_blank"v class="sticky-badge">
-        <img src="images/ai-visibility-checker.png" />
-        <span class="badge--text">AI Visibility Checker</span>
+      <a href="https://chatgpt.com/g/g-687ab0e9b5e88191bff2805c4d76fe5e-ai-job-risk-assessment" target="_blank"v class="sticky-badge">
+        <img src="images/ai-risk.png" />
+        <span class="badge--text">AI Job Risk Assessment</span>
         <span class="micro text--grey">Try my custom GPT</span>
       </a>
 
